# summarize

./: pyproject.toml
summarize/: crud.py  extractor.py  main.py  models.py  podcast.py  schemas.py
summarize/static/css/: main.css
summarize/templates/: base.html  macros.html  podcasts.html  summaries.html  summary.html
