[tool.poetry]
name = "summarize"
version = "0.1.0"
description = ""
authors = ["Christian Cueni <christian.cueni@iterativ.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.3.0"
langchain-openai = "^0.2.0"
html2text = "^2024.2.26"
python-dotenv = "^1.0.1"
youtube-transcript-api = "^0.6.2"
langchain-community = "^0.3.0"
structlog = "^24.4.0"
pytailwindcss = "^0.2.0"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
jinja2 = "^3.1.4"
sqlalchemy = "^2.0.35"
ruff = "^0.6.7"
replicate = "^0.33.0"
requests = "^2.32.3"
python-multipart = "^0.0.10"
markdown = "^3.7"
pydub = "^0.25.1"
environs = "^11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "summarize.main:start"

